# BasiliskEngine

./: .gitignore  CMakeLists.txt  README.md  add_test.py  audio_test.py  boilerplate.py  broad_bvh_test.py  bvh_test.py  cam_track.py  camera_test.py  chunk_test.py  collision_test.py  custom_data_test.py  custom_node_test.py  custom_shader_format.py  draw_test.py  edge_detect_test.py  editor.py  emission_test.py  fbo_test.py  high_object_test.py  image_binding_test.py  image_test.py  line_count.py  lines.py  linux_test.py  main.cpp  main.py  material_test.py  mesh_test.py  mglo_error_test.py  mtl_demo.py  mtl_maker.py  mtl_tester.py  multi_render_test.py  multimaterial_test.py  multishader_test.py  narrow_bvh_test.py  nesting_test.py  nesting_user_scripts.txt  (+24 more)
.github/workflows/: wheels.yml
basilisk/: __init__.py  basilisk.pyi  build.py  engine.py  node.py  scene.py
basilisk/audio/: sound.py
basilisk/basilisk/: __init__.pyi  forces.pyi
basilisk/collisions/: collider.py  collider_handler.py
basilisk/draw/: draw.py  draw_handler.py  font_renderer.py
basilisk/generic/: abstract_bvh.py  collisions.py  input_validation.py  matrices.py  meshes.py  quat.py  vec3.py
basilisk/input/: mouse.py
basilisk/input_output/: mouse.py
basilisk/mesh/: cube.py  mesh.py  mesh_from_data.py  narrow_aabb.py  narrow_bvh.py  narrow_primative.py
basilisk/nodes/: node.py  node_handler.py
basilisk/particles/: particle_handler.py  particle_renderer.py
basilisk/physics/: impulse.py  physics_body.py  physics_engine.py
basilisk/render/: batch.py  batch_handler.py  camera.py  chunk.py  chunk_handler.py  frame.py  framebuffer.py  image.py  image_handler.py  light_handler.py  material.py  material_handler.py  mesh.py  post_process.py  shader.py  shader_handler.py  sky.py
basilisk/shaders/: batch.frag  batch.vert  draw.frag  lighting_observations_and_methods.md  normal.frag  normal.vert  particle.frag  particle.vert
basiliskengine/: __init__.py  engine.py  node.py  scene.py
bindings/: bindings.cpp  property_test_cases.txt  quat_proxy.h  vector_proxy.h
boilerplate/: build_pyinstaller.py
cpp/: epa.cpp  epa.h  gjk.cpp  gjk.h  helper.cpp  helper.h  narrow_collisions.cpp  test.py
editor/: editor_handler.py  editor_input.py  editor_ui.py  hierarchy.py  inspector.py  inspector_old.py  project_view.py  test.py
example/: test.py
examples/: face.py  main_entity.cpp  main_instance.cpp  post_process.py  shader.py  test.py
include/: CMakeLists.txt
include/basilisk/: basilisk.h  includes.h  print.h
include/basilisk/IO/: keyboard.h  mouse.h  window.h
include/basilisk/camera/: camera.h  camera2d.h  staticCamera.h  staticCamera2d.h  virtualCamera.h
include/basilisk/compute/: gpuTypes.hpp  gpuWrapper.hpp  uniforms.hpp
include/basilisk/engine/: engine.h
include/basilisk/forces/: force.h  manifold.h
include/basilisk/instance/: instanceHandler.h  instancer.h  instancer.tpp
include/basilisk/nodes/: node.h  node2d.h  virtualNode.h  virtualNode.tpp
include/basilisk/physics/: force.h  maths.h  rigid.h  solver.h
include/basilisk/physics/cellular/: cellBuffer.h  color.h  convexDecompose.h  helper.h  marching.h  rdp.h  renderBuffer.h
include/basilisk/physics/collision/: bvh.h  collider.h  collision.h  epa.h  gjk.h  primative.h  primitive.h
include/basilisk/physics/coloring/: colorTable.h
include/basilisk/physics/forces/: force.h  gravity.h  ignoreCollision.h  joint.h  manifold.h  motor.h  spring.h
include/basilisk/physics/tables/: adjacency.h  bodyTable.h  colliderTable.h  colorTable.h  forceTable.h  forceTypeTable.h  virtualTable.h
include/basilisk/physics/threading/: scratch.h
include/basilisk/render/: ebo.h  frame.h  image.h  material.h  mesh.h  shader.h  skybox.h  tbo.h  texture.h  textureArray.h  vao.h  vbo.h
include/basilisk/resource/: lightServer.h  materialServer.h  resourceServer.h  textureServer.h
include/basilisk/scene/: raycast.h  scene.h  scene2d.h  sceneRoute.h  virtualScene.h
include/basilisk/shapes/: collider.h  rigid.h
include/basilisk/solver/: physics.h  solver.h
include/basilisk/tables/: bodyTable.h  colliderFlat.h  colliderTable.h  compactTensor.h  eraseChunks.h  expandTensor.h  forceRoute.h  forceTable.h  manifoldTable.h  virtualTable.h
include/basilisk/util/: constants.h  debug.h  fileHandling.h  gpuTypes.hpp  includes.h  linalg.h  maths.h  print.h  random.h  resolvePath.h  splashScreen.h  time.h
old code/: rigid.cpp
old_code/: collision.cpp  epa.cpp  gjk.cpp  gjk.h
physics_source/: main.cpp  manifold.cpp  print.cpp  print.h  solver.cpp  solver.h
render/: material_handler.py
rust_gpu/: Cargo.toml
saves/: ball.gltf  bar.gltf  base_save.gltf  material_showcase.gltf  new_scene.gltf  parkour.gltf  physics_sample.gltf  physics_save_test.gltf  ramp.gltf  room0.gltf  room1.gltf  room2.gltf  room3.gltf  room4.gltf  room5.gltf  room_tall_long.gltf  room_up.gltf  room_up_long.gltf  room_vtall.gltf  sample_save.gltf  sample_scene.bsk  specifications.md  test_save.gltf  totorial.gltf  tutorial.gltf  white_house.gltf  white_temp.gltf
scripts/: camera.py  model.py  model_handler.py  project.py  scene.py
shaders/: batch.frag  batch.vert  copy_portion.frag  cutscene.frag  dual.wgsl  instance.frag  instance2D.frag  overlay.frag  overlay.vert  particle3d.frag  particle3d.vert  post.frag  sand.frag  shader.frag  shader.vert  test.frag
src/: basilisk.h  buffer.cpp  buffer.h  camera.cpp  camera.h  chunk.cpp  chunk.h  chunkHandler.cpp  chunkHandler.h  collision_test.cpp  drop.cpp  drop_convex.cpp  ebo.cpp  ebo.h  engine.cpp  engine.h  game.cpp  includes.cpp  includes.h  instanceHandler.h  instancer.h  instancer.tpp  keyboard.h  keys.cpp  keys.h  main.cpp  main_forces_test.cpp  mat.h  material.h  mesh.cpp  mesh.h  mesh_test.cpp  mouse.cpp  mouse.h  node.cpp  node.h  nodeHandler.cpp  nodeHandler.h  perlin.h  sand_decomp.cpp  (+14 more)
tools/: rewrite_includes.py
user_scripts/: add_john.py  bottom_on_frame.py  delaunay.py  face_camera.py  head_on_frame.py  overlay.py  scene_on_frame.py  scene_on_init.py  scene_on_render.py  walking_animation.py
(+255 files in other folders)
